# FACP-iZone

./: .gitignore  .gitmodules  PRD.md  PROJECT_STATUS_UPDATE.md  README.md  package-lock.json
firmware/: CMakeLists.txt  README.md  README_BUILD.md  build.bat  build.sh
firmware/cmake/: pico_sdk_detection.cmake
firmware/config/: FreeRTOSConfig.h
firmware/include/: freertos_prototypes.h  smp_config.h  system_init.h
firmware/src/: freertos_config.c  main.c  smp_config.c  system_init.c
hardware/docs/: existing_hardware_analysis.md  rp2040_pinout_table.md  rp2040_quick_reference.md
